<resources>
    <string name="app_name">微易贷</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="multi_city">开启多城市</string>
    <string name="no_network">网络不好(˵¯͒⌢͗¯͒˵)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="headerTxt">就看天气</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_error">出了点小问题，别担心，( •̀ .̫ •́ )✧</string>
    <string name="version_name">就看天气 Version-</string>

    <string name="chage_icon">更换图标</string>
    <string name="nav_city">选择城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="multi_cities">多城市管理</string>
    <string name="double_exit">再按一次退出</string>
    <string name="complete">加载成功,‘(*^﹏^*)′</string>
    <string name="errorLocation">定位失败,加载默认城市,^_^"</string>
    <string name="bugTableUrl">https://www.wenjuan.com/s/YbqANfc/</string>
    <string-array name="icons">
        <item>图标一</item>
        <item>图标二</item>
    </string-array>

    <string-array name="cache_time">
        <item>禁止刷新</item>
        <item>每1小时</item>
        <item>每3小时</item>
        <item>每6小时</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="app_title">新版个税计算器</string>
    <string name="input_salary">请输入税前月薪或税后月薪</string>
    <string name="social_security_and_housing_fund_option"><![CDATA[社保及公积金选项 >]]></string>
    <string name="select_cities">上海</string>
    <string name="calculate_after_tax_income">计算税后收入</string>
    <string name="inverse_pre_tax_income">反推税前收入</string>
    <string name="pre_tax_income">税前收入：</string>
    <string name="after_tax_income">税后收入：</string>
    <string name="text_space"></string>
    <string name="pay_tax_value">缴纳个税：</string>
    <string name="full_insurance">三险一金：</string>
    <string name="title_activity_city_select">社保公积金选项</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit_click_back_again">再按一次退出程序</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_sub1">提交</string>
    <string name="btn_cancel">重置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="time">2016-12-24 19:56</string>
    <string name="author">网易</string>
    <string name="title">text</string>
    <string name="entry">立即体验</string>
    <string name="ze1">贷款金额</string>
    <string name="nx1">贷款年限</string>
    <string name="lv1">年利率</string>
    <string name="am10">贷款总额</string>
    <string name="am11">还款月数</string>
    <string name="am12">月还款</string>
    <string name="am13">总支付利息</string>
    <string name="am14">本息总和</string>
    <string name="zex1">公积金贷款总额</string>
    <string name="zex2">商业贷款总额</string>
    <string name="lvx1">公积金年利率</string>
    <string name="lvx2">商业年利率</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
