<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xiecc.qianbao.modules.main.ui.HunHeFragment">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/widget_layout_mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/tx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRowx7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/nxx1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nx1" >
                </TextView>

                <Spinner
                    android:id="@+id/nxvx1"
                    android:layout_width="200px"
                    android:layout_height="wrap_content" >
                </Spinner>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/zex1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zex1" >
                </TextView>

                <EditText android:background="@android:drawable/edit_text"
                    android:id="@+id/zevx1"
                    android:layout_height="wrap_content"
                    android:layout_width="200px"
                    android:ems="10"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowx3"
                android:layout_width="70dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lvx1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lvx1" >
                </TextView>

                <EditText android:background="@android:drawable/edit_text"
                    android:id="@+id/lvvvx1"
                    android:layout_width="200px"
                    android:layout_height="wrap_content"
                    android:numeric="decimal"
                    android:text="4.50" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowx5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/zex2"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zex2" >
                </TextView>

                <EditText android:background="@android:drawable/edit_text"
                    android:id="@+id/zevx2"
                    android:layout_height="wrap_content"
                    android:layout_width="200px"
                    android:ems="10"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>



            <TableRow
                android:id="@+id/tableRowx6"
                android:layout_width="70dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lvx2"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lvx2" >
                </TextView>

                <Spinner
                    android:id="@+id/lvvx2"
                    android:layout_width="200px"
                    android:layout_height="wrap_content" >
                </Spinner>

                <EditText android:background="@android:drawable/edit_text"
                    android:id="@+id/lvvvx2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="decimal"
                    android:text="6.55" >
                </EditText>
            </TableRow>




            <TableRow
                android:id="@+id/tableRowx4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" >

                    <Button
                        android:id="@+id/subx1"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sub1"
                         >
                    </Button>

                    <Button
                        android:id="@+id/cancelx1"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:text="@string/btn_cancel"
                        >
                    </Button>
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </LinearLayout>
    <include layout="@layout/out"/>
</LinearLayout>

