<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="50dp"
    android:layout_below="@+id/widget_layout_sy"
    android:id="@+id/tableRow12"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="输出结果："
                android:textSize="12sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#A0A0A0" >
            </View>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="" />

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="等额本息" />

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="等额本金" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/am10" />

                <TextView
                    android:id="@+id/am10"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/am20"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/am11" />

                <TextView
                    android:id="@+id/am11"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/am21"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/am12" />

                <TextView
                    android:id="@+id/am12"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/am22"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/am13" />

                <TextView
                    android:id="@+id/am13"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/am23"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" >

                <TextView
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/am14" />

                <TextView
                    android:id="@+id/am14"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/am24"
                    style="@style/textview_allgrade_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="0"
                    android:textColor="@color/red" />
            </TableRow>
        </TableLayout>
</TableRow>